<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="house_type">House Type</string>
    <string name="general">Général</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="surface_m">Surface m²</string>
    <string name="rooms">Rooms</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bathroom</string>
    <string name="bedroom">Bedroom</string>
    <string name="living_room">Living Room</string>
    <string name="toilet">Toilet</string>
    <string name="cellar">Cellar</string>
    <string name="pool">Pool</string>
    <string name="description">Description</string>
    <string name="property_description">Property description</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="additional_information">Additional information</string>
    <string name="availibilty_date">Availability Date</string>
    <string name="availibility_date">Availability date</string>
    <string name="add_availibility_date">Add availability date</string>
    <string name="point_of_interests">Point Of Interests</string>
    <string name="add_a_point_of_interest">Add a point of interest</string>
    <string name="real_estate_agent">Real Estate Agent</string>
    <string name="photos">Photos</string>
    <string name="add_pictures">Add pictures</string>
    <string name="add_the_property">Add the property</string>
    <string name="picture_set_default">Picture set as default !</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_retrieving_data">Error when retrieving data !</string>
    <string name="house_successfully_added">The house has been successfully added !</string>
    <string name="cant_make_map_request">You can\'t make map requests !</string>
    <string name="couldnt_get_location">Couldn\'t get your location !</string>
    <string name="title_activity_real_estate_detail">RealEstateDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="house_price">%1$s $</string>
    <string name="available_for">Available for the %1$s</string>
    <string name="sold">Sold the %1$s</string>
    <string name="district_not_specified">District not specified</string>
    <string name="house_type_not_specified">House type not specified</string>
    <string name="house_surface_not_specified">House surface not specified</string>
    <string name="real_estate_agent_name">%1$s %2$s</string>
    <string name="availability_date_not_specified">Availability date not specified</string>
    <string name="number_format_room">%d</string>
    <string name="number_format_double">%1$,.2f</string>
    <string name="couldnt_get_place_location">Couldn\'t get the place location</string>
    <string name="price_not_specified">Price not specified !</string>
    <string name="description_not_specified">Description not specified !</string>
    <string name="street_not_specified">Street not specified</string>
    <string name="address_street_number">%1$s, %2$s</string>
    <string name="address_district_city">%1$s %2$s</string>
    <string name="city_not_specified">City not specified</string>
    <string name="no_add_information">No additional information</string>
    <string name="search">Search</string>
    <string name="info_success_update">The information has been succesfully updated !</string>
    <string name="non_specified">NS</string>
    <string name="unspecified_description">Description unspecified</string>
    <string name="unspecified">Unspecified</string>
    <string name="date_unspecified">Date unspecified</string>
    <string name="search_dialog">Search Dialog</string>
    <string name="select_date">Select date</string>
    <string name="photo_number">Photo number</string>
    <string name="cancel">Cancel</string>
    <string name="tag_search_dialog">search dialog</string>
    <string name="no_district_defined">No district defined</string>
    <string name="no_price_available">No Price Available</string>
    <string name="no_surface_available">No Surface Available</string>
    <string name="house_has_been_sold">The house has been sold !</string>
    <string name="house_is_already_sold">The house is already sold !</string>
    <string name="update_the_property">Update the property</string>
    <string name="unchange_house_sold">Unchangeable : The house has been sold !</string>
    <string name="point_of_interest_succesfully_removed">The point of interest has been successfully removed !</string>
    <string name="photo_successfully_removed">The photo has been successfully removed !</string>
    <string name="update_availability_date">Update availability date</string>
    <string name="update_point_interest">Update points of interest</string>
    <string name="add_a_video">Add a video</string>
    <string name="video">Video</string>
    <string name="no_video_added">No video added</string>
    <string name="school">Schools</string>
    <string name="shops">Shops</string>
    <string name="park">Parks</string>
    <string name="stations">Stations</string>
    <string name="update_video">update video</string>
    <string name="unable_get_location">Unable to get your location ! Please allow the app to get your location.</string>
    <string name="not_retrieving_data_for_place">Coudn\'t retrieve data for this place !</string>
    <string name="picture_room_name_num_order_room">%1$s %02d</string>
    <string name="need_internet_access">You need internet to access to display the map !</string>
</resources>
