<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_house_type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/house_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/tv_house_type_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:editable="false"
            android:focusableInTouchMode="true"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/v_surface_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_house_type_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="8dp"
        android:text="@string/surface"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/v_surface_view_2"
        app:layout_constraintStart_toEndOf="@+id/v_surface_view"
        app:layout_constraintTop_toBottomOf="@+id/til_house_type_layout"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_surface_view_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_surface"
        app:layout_constraintTop_toBottomOf="@+id/til_house_type_layout" />

    <com.jaygoo.widget.RangeSeekBar
        android:id="@+id/sb_surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:padding="15dp"
        app:rsb_mode="range"
        app:rsb_steps="5"
        app:rsb_progress_color="@color/colorAccent"
        app:rsb_thumb_width="23dp"
        app:rsb_thumb_height="23dp"
        app:rsb_thumb_scale_ratio="0.8"
        app:rsb_indicator_show_mode="alwaysShow"
        app:rsb_indicator_width="30dp"
        app:rsb_indicator_height="30dp"
        app:rsb_indicator_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_surface" />

    <View
        android:id="@+id/v_price_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_surface" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="8dp"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/v_price_view_2"
        app:layout_constraintStart_toEndOf="@+id/v_price_view"
        app:layout_constraintTop_toBottomOf="@+id/sb_surface"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_price_view_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_price"
        app:layout_constraintTop_toBottomOf="@+id/sb_surface" />

    <com.jaygoo.widget.RangeSeekBar
        android:id="@+id/sb_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        app:rsb_mode="range"
        app:rsb_steps="5"
        app:rsb_progress_color="@color/colorAccent"
        app:rsb_thumb_width="23dp"
        app:rsb_thumb_height="23dp"
        app:rsb_thumb_scale_ratio="0.8"
        app:rsb_indicator_show_mode="alwaysShow"
        app:rsb_indicator_width="35dp"
        app:rsb_indicator_height="35dp"
        app:rsb_indicator_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <View
        android:id="@+id/v_availability_date_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_availability_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_price" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_availability_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="8dp"
        android:text="@string/availibility_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/v_availability_date_view_2"
        app:layout_constraintStart_toEndOf="@+id/v_availability_date_view"
        app:layout_constraintTop_toBottomOf="@+id/sb_price"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_availability_date_view_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_availability_date"
        app:layout_constraintTop_toBottomOf="@+id/sb_price" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_availibility_date_dialog"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/availibility_date"
        app:layout_constraintEnd_toStartOf="@+id/bt_add_availability_date_dialog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_availability_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_availibility_date_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_add_availability_date_dialog"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="13dp"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_availibility_date_dialog"
        app:layout_constraintTop_toBottomOf="@+id/tv_availability_date" />

    <View
        android:id="@+id/v_district_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_district_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_availibility_date_dialog" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_district_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="8dp"
        android:text="@string/district"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/v_district_view_2"
        app:layout_constraintStart_toEndOf="@+id/v_district_view"
        app:layout_constraintTop_toBottomOf="@+id/til_availibility_date_dialog"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_district_view_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_district_date"
        app:layout_constraintTop_toBottomOf="@+id/til_availibility_date_dialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_district_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/district"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_district_date">

        <AutoCompleteTextView
            android:id="@+id/tv_district_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:editable="false"
            android:focusableInTouchMode="true"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/v_photo_number_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_photo_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_district_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_photo_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="8dp"
        android:text="@string/photo_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/v_photo_number_view_2"
        app:layout_constraintStart_toEndOf="@+id/v_photo_number_view"
        app:layout_constraintTop_toBottomOf="@+id/til_district_layout"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_photo_number_view_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_photo_number"
        app:layout_constraintTop_toBottomOf="@+id/til_district_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_photo_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Photo number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_photo_number">

        <AutoCompleteTextView
            android:id="@+id/tv_nb_photo_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:editable="false"
            android:focusableInTouchMode="true"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>